# SwiftShareX

./: App.tsx  LICENSE  README.md  app.json  package-lock.json  package.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.android.bundle
android/app/src/main/cpp/: CMakeLists.txt  OnLoad.cpp  jsi_bridge.cpp  jsi_install.cpp
android/app/src/main/cpp/native-core/include/: protocol.h  transfer_engine.h
android/app/src/main/cpp/native-core/src/: transfer_engine.cpp
android/app/src/main/res/drawable/: splash.xml  splash_icon.xml
android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
android/app/src/main/res/values-v33/: styles.xml
ios/: Podfile
ios/SwiftShareX/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/SwiftShareX.xcodeproj/: project.pbxproj
ios/SwiftShareX.xcodeproj/xcshareddata/xcschemes/: SwiftShareX.xcscheme
ios/SwiftShareX.xcworkspace/: contents.xcworkspacedata
native-core/include/: transfer_engine.h
native-core/src/: transfer_engine.cpp
src/: react-native.d.ts
src/components/: ActionRow.tsx  CircularLoader.tsx  DeviceCard.tsx  EmptyState.tsx  FileItemComponent.tsx  ProgressBar.tsx  RoleButton.tsx  ScanningIndicator.tsx  TabBar.tsx
src/hooks/: useDeviceInfo.ts
src/modals/: SendConfirmationModal.tsx
src/navigation/: RootNavigator.tsx
src/screens/: ChooseRoleScreen.tsx  DevicePickerScreen.tsx  SessionScreen.tsx
src/utils/: fileUtils.ts
(+10 files in other folders)
